# elo-simulator

./: Cargo.toml  README.md
samples/: ryuuou-2020-2-elimination.toml
scripts/: fetch-junni.py  fetch-players.py
src/: brute.rs  entity.rs  lib.rs  main.rs  sim.rs
