[package]
name = "elo-simulator"
version = "0.1.0"
authors = ["koba-e964 <3303362+koba-e964@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.5"